fixed issues with banner image and nav spacing

--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,11 @@ img {
     width: 100%;
   }
 }
+@media (max-width: 500px) {
+  .navDiv nav {
+    justify-content: space-around;
+  }
+}
 .navDiv nav a {
   text-decoration: none;
   font-size: 1.5rem;
@@ -235,11 +240,18 @@ img {
 .home header {
   border-bottom: 2px dashed #C0C0C0;
 }
-.home header div {
+@media (max-width: 500px) {
+  .home header .imageDiv img {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+.home header .titleDiv {
   padding-top: 3%;
 }
 @media (max-width: 500px) {
-  .home header div {
+  .home header .titleDiv {
     padding: 4%;
   }
 }
@@ -351,6 +363,10 @@ img {
   .home .content-pick .destination {
     width: 90%;
     padding: 0 7%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 .home .content-pick .destination .btn {
