--- a/less/navigation.less
+++ b/less/navigation.less
@@ -37,6 +37,10 @@
       width: 100%;
     }
 
+    @media @mobile {
+      justify-content: space-around;
+    }
+
     a {
       text-decoration: none;
       font-size: 1.5rem;
